--- a/joshua/app/index.html
+++ b/joshua/app/index.html
@@ -43,6 +43,7 @@
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
+
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/jquery.js"></script>
@@ -56,10 +57,15 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+    <!-- firebase -->
+    <script src="https://cdn.firebase.com/v0/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/0.6.0/angularfire.min.js"></script>
+
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/basics.js"></script>
+        <script src="scripts/controllers/firebase.js"></script>
         <!-- endbuild -->
 </body>
 </html>
